tests/golden/reject/return_const_overflow_reject.goo
package main

func f() int8 {
	return 300
}

func main() {
	println(f())
}
